[tool.poetry]
name = "rekx"
version = "1.0.0"
description = "My description"
authors = ["Nikos Alexandris"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<4.0"
rich = "^13.7.0"
typer = "^0.9.0"
xarray = "^2023.12.0"
netcdf4 = "^1.6.5"
fsspec = "^2023.12.2"
kerchunk = "^0.2.2"
loguru = "^0.7.2"
humanize = "^4.9.0"
devtools = "^0.12.2"
dask = "^2023.12.1"
xarray-extras = "^0.5.0"
h5py = "^3.10.0"
pydantic = "^2.5.3"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
